update to RSP exercise

--- a/lesson_2/rock_paper_scissors/rsp_bonus.yml
+++ b/lesson_2/rock_paper_scissors/rsp_bonus.yml
@@ -8,9 +8,9 @@ computer_choice_selection: 'Computer chose: '
 player_name: 'PLAYER - '
 computer_name: ' - COMPUTER'
 round: 'ROUND '
-player_win: 'You WON the game!'
+player_win: 'You WIN the game!'
 computer_win: "You lost the game! It's okay, it's just a game."
 end_game: 'Thank you for playing! Have a good day!'
 game_tie: "It's a tie!"
-game_player_win: 'You WON this round!'
-game_computer_win: 'You LOST this round!'
+game_player_win: 'You WIN this round!'
+game_computer_win: 'You LOSE this round!'
